--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
    },
    "dependencies": {
       "dotenv": "^17.0.1",
-      "express": "^5.1.0"
+      "express": "^5.1.0",
+      "openai": "^5.8.2"
    }
 }
