--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
    "dependencies": {
       "dotenv": "^17.0.1",
       "express": "^5.1.0",
-      "openai": "^5.8.2"
+      "openai": "^5.8.2",
+      "zod": "^3.25.76"
    }
 }
