--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,12 +9,14 @@
    },
    "devDependencies": {
       "@types/bun": "latest",
-      "@types/express": "^5.0.3"
+      "@types/express": "^5.0.3",
+      "prisma": "^6.13.0"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
+      "@prisma/client": "^6.13.0",
       "dotenv": "^17.0.1",
       "express": "^5.1.0",
       "openai": "^5.8.2",
