--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
    },
    "dependencies": {
       "@prisma/client": "^6.13.0",
+      "dayjs": "^1.11.13",
       "dotenv": "^17.0.1",
       "express": "^5.1.0",
       "openai": "^5.8.2",
