--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
       "typescript": "^5"
    },
    "dependencies": {
+      "@huggingface/inference": "^4.7.1",
       "@prisma/client": "^6.13.0",
       "dayjs": "^1.11.13",
       "dotenv": "^17.0.1",
