--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,6 +21,7 @@
       "dayjs": "^1.11.13",
       "dotenv": "^17.0.1",
       "express": "^5.1.0",
+      "ollama": "^0.5.17",
       "openai": "^5.8.2",
       "zod": "^3.25.76"
    }
