--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/bun": "latest",
     "concurrently": "^9.2.0",
     "husky": "^9.1.7",
